@@ -1,0 +1,28 @@
+version: 1.0.{build}
+image: Visual Studio 2022
+services: postgresql12
+before_build:
+- cmd: >-
+    call "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvars64.bat"
+
+    cmake -DBUILD_SHARED_LIBS=1 -DCMAKE_CXX_STANDARD=23
+configuration: Release
+build:
+  parallel: true
+  project: libpqxx.sln
+test_script:
+- ps: >-
+    $env:Path += ";.\src\Release;C:\Program Files\PostgreSQL\12\bin"
+
+    $env:PGUSER = "postgres"
+
+    $env:PGPASSWORD = "Password12!"
+
+    .\test\Release\runner.exe
+notifications:
+- provider: Email
+  subject: 'libpqxx: AppVeyor build failure'
+  message: The libpqxx AppVeyor build has failed.
+  on_build_success: false
+  on_build_failure: true
+  on_build_status_changed: false
